# here-tech

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
.claude/: .nfs00000001006fb47200000066
scripts/: example_usage.py
src/: __init__.py
src/models/: __init__.py  clip_model.py  dinov2_model.py
src/utils/: normalization.py
src/visualization/: band_viz.py
